--- a/ModelFunctions/BuildingDemoModel.Rmd
+++ b/ModelFunctions/BuildingDemoModel.Rmd
@@ -98,9 +98,9 @@ rm(i)
 
 asp.effects <-
   list(
-    c(-1, 1), # Simple
-    c(-0.5,1), # Asymmetrical, 2 pop
-    c(-0.5,-1,1) # 3 pops
+     c(-1, 1) #, # Simple
+    # c(-0.5,1), # Asymmetrical, 2 pop
+    # c(-0.5,-1,1) # 3 pops
 )
 
 # n.subpops <- length(asp.effects)
@@ -108,15 +108,16 @@ burn.in <- 50
 sim.years <- 200
 years <- burn.in + sim.years
 seeds <- 500
+move.rate = 0.05
 
 # Loop over these
-reps <- 20
-asp.mags <- seq(0,30,1)
-clim.sds <- seq(0,30,1)
+reps <- 1
+asp.mags <- seq(0,20,1)
+clim.sds <- seq(0,20,1)
 
 # Initiate cluster
 # stopCluster(cl)
-cl = makeCluster(20)
+cl = makeCluster(2)
 registerDoParallel(cl = cl)
 
 maxLam_by_climsd_df <- 
@@ -132,6 +133,8 @@ maxLam_by_climsd_df <-
         growth_params.i <- growth_params
         surv_params.i <- surv_params
         growth_params.i$asp.mag <- surv_params.i$asp.mag <- asp.mag.i
+        
+        move.mx <- moveMx_fun(n.subpops = n.subpops, move.rate = move.rate)
         
         # Start cells for filling in the pop matrix
         start.cells <- F.rows <- seq(1,n.subpops*3,by=3)
@@ -169,7 +172,8 @@ maxLam_by_climsd_df <-
             } # End subpop loop
 
           # Calc t1 population vector
-          pop.vec.t1 = pop.mx%*%pop.vec.t0
+          pop.vec.t1 = move.mx%*%pop.mx%*%pop.vec.t0
+          # pop.vec.t1 = pop.mx%*%pop.vec.t0
 
           lam <- sum(pop.vec.t1)/sum(pop.vec.t0)
           annual.df$lam[yr] <- lam
@@ -285,7 +289,6 @@ seed_search <- foreach(r = 1:reps, .combine=rbind, .packages=c("tidyverse","EnvS
         
         # Calc t1 population vector
         
-        # pop.mx.m <- move.mx%*%pop.mx
         pop.vec.t1 = move.mx%*%pop.mx%*%pop.vec.t0
         
         lam <- sum(pop.vec.t1)/sum(pop.vec.t0)
