--- a/ModelFunctions/BuildingDemoModel.Rmd
+++ b/ModelFunctions/BuildingDemoModel.Rmd
@@ -98,12 +98,20 @@ rm(i)
 
 asp.effects <-
   list(
-     c(-1, 1) , # Simple
-     c(-0.5,1), # Asymmetrical, 2 pop
-     c(-0.75,1),
-     c(-0.5,1.5),
-     c(-0.5,2),
-     c(-0.5,-1,1) # 3 pops
+     # c(-0.5, 1), # Asymmetrical, 2 pop
+     # c(-0.75,1),
+     # c(-1,   1) , # Simple
+       c(-1.5, 1),
+       c(-2,   1),
+       
+       # Comparing to 0.5
+       c(-0.5, 0.5) # ,
+       # c(-0.5,1.5),
+       # c(-0.5,2),
+       
+       # 3 pops
+       # c(-0.5,-1, 1) 
+
 )
 
 # n.subpops <- length(asp.effects)
