--- a/SimFunctions/SimWrapper.Rmd
+++ b/SimFunctions/SimWrapper.Rmd
@@ -43,35 +43,23 @@ clim.sds <- seq(0,20,by=1);clim.sds[clim.sds==0] <- 0.001
 asp.mags <- seq(0,20,by=1)
 rhos <- seq(0,0.2,0.2)
 move.rates <- c(0.05,0.2,0.4)
-# 
-# asp.effects <- 
-#   list(
-#     # Symmetrical
-#     c(-1, 1), # Simple
-#     c(-1.1,-1, 1,1.1), # More pops
-#     c(-1.5,-1, 1,1.5), # More pops more dramatic
-#     
-#     # Asymmetrical
-#     c(-1,-1,1),
-#     c(-1.1,1) , 
-#     c(-1.2,-1.1,-1,1)
-# )
-# 
-# asp.effects <-
-#   list(
-#     c(-2, 1), 
-#     c(-2,-1, 1), 
-#     c(-2,-1, 1,2) 
-# )
 
 asp.effects <-
   list(
-     c(-1, 1) , # Simple
-     c(-0.5,1), # Asymmetrical, 2 pop
-     c(-0.75,1),
-     c(-0.5,1.5),
-     c(-0.5,2),
-     c(-0.5,-1,1) # 3 pops
+     # c(-0.5,  1), # Asymmetrical, 2 pop
+     # c(-0.75, 1),
+     # c(-1,    1) , # Simple
+       c(-1.5,  1),
+       c(-2,    1),
+       
+       # Comparing to 0.5
+       c(-0.5,  0.5) # ,
+       # c(-0.5,1.5),
+       # c(-0.5,2),
+       
+       # 3 pops
+       # c(-0.5,-1, 1) 
+
 )
 
 # Things needed to run sim function line by line
