--- a/SimFunctions/SimulatePopData.Rmd
+++ b/SimFunctions/SimulatePopData.Rmd
@@ -13,15 +13,21 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 rm(list=ls())
 library(tidyverse)
+library(data.table)
 library(EnvStats)
 library(parallel)
 library(doParallel)
 library(foreach)
 
-seeds_df <- read_csv("seedSearchOutput/seedSearch_2025-02-27 20:15:48.624276.csv")
+seeds_df <- read_csv("seedSearchOutput/seedSearch_2025-02-27 20:15:48.624276.csv") %>% 
+  mutate(seeds2 = floor(seeds)) %>% 
+  group_by(asp.effects,asp.mag,clim.sd) %>% 
+  summarize(avg.seeds = round(mean(seeds)))
 
 source("ModelFunctions/ParamVals.R")
 source("SimFunctions/simData_fun.R")
+# source("SimFunctions/simData_fun2.R")
+# source("SimFunctions/CopyOfsimData_fun.R")
 source("SimFunctions/clim_vals_fun.R")
 source("ModelFunctions/survival_fun.R")
 source("ModelFunctions/growth_fun.R")
@@ -34,47 +40,133 @@ Very basic:
 - 2 subpopulations, aspect effects = -1,1
 - optimal climate standard deviation
 - Range of movement rates and 
+
+```{r}
+
+# Define your parameters
+reps <- 5
+clim.sds <- c(0.01,seq(1, 20, 1))
+asp.mags <- c(0, 1, 5, 8:15)
+rhos <- 0
+move.rates <- c(0.05, 0.2, 0.4)
+asp.effects <- c(-1, 1)
+timesteps <- 20
+
+# Create output directories
+# sapply(asp.mags, function(x)
+#   if (!dir.exists(paste0("SimOutput/simulatedData/V2/aspmag", x)))
+#     dir.create(paste0("SimOutput/simulatedData/V2/aspmag", x))
+# )
+
+# Parameter combinations
+param_grid <- expand.grid(
+  rep = 1:reps,
+  asp.mag = asp.mags,
+  clim.sd = clim.sds,
+  move.rate = move.rates,
+  rho = rhos
+)
+
+# Set up parallel cluster
+n.cores <- 5
+cl <- makeCluster(n.cores)
+registerDoParallel(cl)
+
+# Limit nested threading
+Sys.setenv(OMP_NUM_THREADS = "1")
+Sys.setenv(MKL_NUM_THREADS = "1")
+Sys.setenv(OPENBLAS_NUM_THREADS = "1")
+Sys.setenv(NUMEXPR_NUM_THREADS = "1")
+
+# Parallel loop over the parameter grid
+invisible(
+  foreach(i = 1:nrow(param_grid), .packages = c("tidyverse", "EnvStats", "data.table")) %dopar% {
+    
+    row <- param_grid[i, ]
+    
+    # Create output directories
+    if(!dir.exists(paste0("SimOutput/simulatedData/V2/aspmag", row$asp.mag))){
+      dir.create(paste0("SimOutput/simulatedData/V2/aspmag", row$asp.mag))
+    }
+    
+    growth_params.i <- growth_params
+    surv_params.i <- surv_params
+
+    clim_vals <- clim_vals_fun(
+      clim.sd = row$clim.sd,
+      rho = row$rho,
+      timesteps = timesteps
+    )
+    
+    seeds.i <- seeds_df$avg.seeds[seeds_df$asp.mag == row$asp.mag & seeds_df$asp.effects == paste(asp.effects, collapse = ",")]
+    
+    df.i <- simulate_pop_data(
+      surv_params = surv_params.i,
+      growth_params = growth_params.i,
+      seeds = seeds.i,
+      timesteps = timesteps,
+      clim_vals = clim_vals,
+      asp.effects = asp.effects,
+      move.rate = row$move.rate,
+      asp.mag = row$asp.mag
+    ) %>%
+      mutate(
+        rep = row$rep,
+        rho = row$rho,
+        clim.sd = row$clim.sd,
+        move.rate = row$move.rate,
+        asp.effects.grp = factor(paste(asp.effects, collapse = ", "))
+      )
+    
+    fwrite(df.i, paste0("SimOutput/simulatedData/V2/aspmag", row$asp.mag,
+                "/clim", row$clim.sd,
+                "_rho", row$rho,
+                "_move", row$move.rate,
+                "_rep", row$rep,
+                ".csv.gz"))
+    
+    rm(df.i, clim_vals, growth_params.i, surv_params.i, seeds.i)
+    return(NULL)
+  } 
+)
+# Stop the cluster
+stopCluster(cl)
+```
+
 ```{r simple_data_sim}
 
 reps <- 5
-clim.sds <- c(0.001,2,5,10,15)
-asp.mags <- c(1,5,10,15)
+clim.sds <- c(0.01,seq(1,20,1))
+asp.mags <- c(0,1,8:15)
 rhos <- 0 # c(0,0.2,0.2)
-move.rates <- c(0.05,0.2,0.4)
+move.rates <- c(0.05,0.2,0.4,0.8)
 asp.effects <- c(-1,1)# list(c(-1,1))
 timesteps <- 20
 
 sapply(asp.mags,function(x)
-  if(!dir.exists( paste0("SimOutput/simulatedData/V1/aspmag",x) ))
-    dir.create(paste0("SimOutput/simulatedData/V1/aspmag",x)) 
+  if(!dir.exists( paste0("SimOutput/simulatedData/V2/aspmag",x) ))
+    dir.create(paste0("SimOutput/simulatedData/V2/aspmag",x)) 
   )
 
-# rep.i = 5
-# move.rate.i = 0.05
-# clim.sd.i = 2
-# asp.mag.i = 10
-# rho.i = 0
 
-cl = makeCluster(spec = 20)
+cl = makeCluster(spec = reps*2)
 registerDoParallel(cl = cl)
 
-foreach(rep.i = 1:reps,.packages=c("tidyverse","EnvStats")) %:%
-  foreach(move.rate.i = move.rates) %:%
-      foreach(clim.sd.i = clim.sds) %:%
-        foreach(asp.mag.i = asp.mags) %:% 
+foreach(rep.i = 1:reps,.packages=c("tidyverse","EnvStats","data.table")) %:%
+   foreach(asp.mag.i = asp.mags) %:% 
+     foreach(clim.sd.i = clim.sds) %:%
+       foreach(move.rate.i = move.rates) %:%
           foreach(rho.i = rhos) %dopar% {
 
             growth_params.i <- growth_params;surv_params.i <- surv_params
             asp.effects.i <-  asp.effects # asp.effects[asp.eff.i] %>% unlist()
 
-            if(clim.sd.i == 0) {clim.sd.i = 0.01}
-            
             clim_vals <- clim_vals_fun(clim.sd = clim.sd.i, rho=rho.i, timesteps = timesteps)
             
             # plot(clim_vals);lines(clim_vals)
             seeds.i = mean(seeds_df$seeds[seeds_df$asp.mag==asp.mag.i & seeds_df$asp.effects == paste(asp.effects.i,collapse = ",")])
 
-            df <- simulate_pop_data(surv_params = surv_params.i,
+            df.i <- simulate_pop_data(surv_params = surv_params.i,
                         growth_params = growth_params.i,
                         seeds = seeds.i,
                         timesteps = timesteps,
@@ -90,8 +182,8 @@ foreach(rep.i = 1:reps,.packages=c("tidyverse","EnvStats")) %:%
                      asp.effects.grp = factor(paste(asp.effects.i,collapse=", ")) )
             
             # write_csv(df, paste0("SimOutput/simData/server/V1/",round(Sys.time()),".csv"))
-            write_csv(df,paste0("SimOutput/simulatedData/V1/aspmag",asp.mag.i,"/clim",clim.sd.i,"_rho",rho.i,"_move",move.rate.i,"_rep",rep.i,".csv"))
-            rm(df,clim_vals)
+            write_csv(df.i,paste0("SimOutput/simulatedData/V2/aspmag",asp.mag.i,"/clim",clim.sd.i,"_rho",rho.i,"_move",move.rate.i,"_rep",rep.i,".csv"))
+            rm(df.i,clim_vals)
             return(NULL)
             
             }
